app/assets/stylesheets/home.css.scss
/* ... */
@media only screen and (min-width: 640px) and (max-width: 770px) {

  h4.index-heading {
    margin-top: 3px;
    line-height:0.3;
  }

  .close-fix {
    padding-right: 0px!important;
  }

  .wish-form {
    height: 200px;
  }

  .menu {
    display: block;
    width: 100%;
    height: 120px;
    position: relative;
    z-index: 10;
    text-align: center;
    background: #f5f5f5;
    margin-top: 50px;
  }

  .adminlog {
    margin-top: 100px!important;
  }

  .admin_log_icons {
    margin-right: 3px;
  }

  .sidebar {
    position: fixed!important;
    display: none;
    z-index: 1;
    width: 75%!important;
    margin-left: -25px;
    overflow: scroll!important;
    height: 100%;
    top: 51px;
    background: #b3cfc0;
    border-right: 1px solid #8db6a0;
    box-shadow-right: 0px 2px 2px -2px #65957b;
    -webkit-box-shadow-right: 0px 2px 2px -2px #65957b;
    -moz-box-shadow-right: 0px 2px 2px -2px #65957b;
    -o-box-shadow-right: 0px 2px 2px -2px #65957b;
  }

  .sidebar a:link, a:visited, a:hover, a:active {
    color: #909090;
  }

  .topbar {
    margin-top: 50px;
  }
  .menu-btn {
    position: fixed!important;
    z-index:1;
    display: inline-block;
    width: 100%;
    background: #b3cfc0;
    color: #fff;
    height: 50px;
    margin-top: 0px;
    border-bottom: 1px solid #8db6a0;
    box-shadow-bottom: 0px 2px 2px -2px #65957b;
    -webkit-box-shadow-bottom: 0px 2px 2px -2px #65957b;
    -moz-box-shadow-bottom: 0px 2px 2px -2px #65957b;
    -o-box-shadow-bottom: 0px 2px 2px -2px #65957b;
  }

  .content-video {
    width: 100%!important;
    height: 170px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 24px;
  }

  .content-img {
    width: 100%!important;
    height: 170px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 24px;
  }

  .video-container {
    width: 60%!important;
    height: 170px!important;
    margin-left: auto;
    margin-right: auto;
  }
  
  .video-container {
    width: 50%!important;
    height: 210px!important;
  }

  .content-wrapper {
    width: 47%;
    margin-left: auto;
    margin-right: auto;
  }

  .content, .content-map {
    width: 100%!important;
    height: 166px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 24px;
  }

  .movie-box-wrapper {
    width: 600px!important;
    float: none!important;
    margin-left: auto;
    margin-right: auto;
  }

  .centering-fix {
    text-align: center!important;
  }

  .padding-fix {
    padding-left: 15px!important;
    padding-right: 15px!important;
  }
}

@media only screen and (max-width: 1024px){

  .contact-box {
    margin-right: 0px!important;
  }

  .sidebar {
    position: fixed!important;
    display: none;
    z-index: 1;
    width: 220px!important;
    margin-left: -25px;
    overflow: scroll!important;
    height: 100%;
    top: 51px;
    background: #b3cfc0;
    border-right: 1px solid #8db6a0;
    box-shadow-right: 0px 2px 2px -2px #65957b;
    -webkit-box-shadow-right: 0px 2px 2px -2px #65957b;
    -moz-box-shadow-right: 0px 2px 2px -2px #65957b;
    -o-box-shadow-right: 0px 2px 2px -2px #65957b;
  }

  .sidebar a:link, a:visited, a:hover, a:active {
    color: #909090;
  }

  .topbar {
    margin-top: 50px;
  }

  .menu-btn {
    position: fixed!important;
    z-index:1;
    display: inline-block;
    width: 100%;
    background: #b3cfc0;
    color: #fff;
    height: 51px;
    margin-top: 0px;
    border-bottom: 1px solid #8db6a0;
    box-shadow-bottom: 0px 2px 2px -2px #65957b;
    -webkit-box-shadow-bottom: 0px 2px 2px -2px #65957b;
    -moz-box-shadow-bottom: 0px 2px 2px -2px #65957b;
    -o-box-shadow-bottom: 0px 2px 2px -2px #65957b;
  }

  .upload-mobile-fix {
    margin-bottom: 15px!important;
  }

  .social-media-icons {
    margin-top: 40px;
  }

}

@media only screen and (max-width: 767px) {
  iframe#video-popup {
    height: 200px;
  }
}

@media only screen and (min-width: 770px) and (max-width: 930px) {
  .movie-box-wrapper {
    width: 300px!important;
  }

  iframe#video-popup {
    height: 300px;
  }
  
  h4.index-heading {
    margin-top: 45px;
    line-height:0.3;
  }
  
  .content-wrapper {
    width: 250px!important;
    margin-left: auto;
    margin-right: auto;
  }

  .content, .content-img, .content-map {
    width: 75%!important;
    height: 157px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 5px;
  }

  .content-video{
    width: 95%!important;
    margin-left: auto;
    margin-right: auto;
  }

  .video-container {
    width: 85%!important;
    height: 150px!important;
  }

}

@media only screen and (min-width: 770px) and (max-width: 930px) {
  .movie-box-wrapper {
    padding-top: 22px;
  }
}

@media only screen and (min-width: 640px) and (max-width: 770px) {
  .movie-box-wrapper {
    padding-top: 20px;
  }
}

@media only screen and (min-width: 930px) and (max-width: 1024px) {
  
  h4.index-heading {
    margin-top: 33px;
    line-height:0.3;
  }
  
  .movie-box-wrapper {
    width: 368px!important;
  }

  .content-wrapper {
    width: 320px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 5px;
  }

  .content, .content-img, .content-map {
    width: 75%!important;
    height: 158px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 5px;
  }

  .content-video{
     width: 85%!important;
     margin-left: auto;
     margin-right: auto;
   }

  .video-container {
    height: 187px!important;
    margin-top: 5px;
  }
}
/* ... */

